tests/should_fail/logic_alias/implicit_logic_alias_in_trait_impl.stderr
error: Implicit logic alias in trait impl is not supported
  --> implicit_logic_alias_in_trait_impl.rs:20:5
   |
20 |     fn is_zero(&self) -> bool {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: Trait item has a `#[logic_alias]` attribute
  --> implicit_logic_alias_in_trait_impl.rs:15:5
   |
15 | /     #[logic_alias(Self::is_zero_log)]
16 | |     fn is_zero(&self) -> bool;
   | |______________________________^
   = help: Trait item and Impl item must have the same `#[logic_alias]` attribute

error: aborting due to 1 previous error

